# insertionation

./: .travis.yml  Cargo.toml  LICENSE  README.md  lerna.json
.github/workflows/: main.yml
bench/: README.md
bench/java/app/: build.gradle.kts
bench/java/app/src/main/kotlin/ru/annoy/test/: App.kt
bench/rust/: Cargo.toml
dotnet/: Directory.Build.props
dotnet/RuAnnoy.Tests/: RuAnnoy.Tests.csproj
example/web/: .parcelrc  package.json
ffi/: Cargo.toml
java/: Cargo.toml  build.gradle.kts
java/src/: lib.rs
java/src/main/java/com/github/kis3tar/RuAnnoy/: NativeMethods.java
java/src/main/kotlin/: AnnoyIndex.kt  NativeLibraryLoader.kt
java/src/test/kotlin/: AnnoyIndexTest.kt
