[package]
authors = ["kis3tar"]
description = """
A rust implementation of annoy(https://github.com/spotify/annoy) (Index serving only). Providing C api as well
"""
edition = "2018"
license = "MIT"
name = "ru_annoy"
repository = "https://github.com/kis3tar/RuAnnoy"
version = "0.1.0"

[features]
cffi = ["libc"]

[dependencies]
libc = {version = "0", optional = true}
memmap = "0"

[lib]
crate-type = ["lib", "cdylib"]
