[package]
authors = ["kis3tar"]
description = """
A rust implementation of annoy(https://github.com/spotify/annoy) (Index serving only). Providing C api as well
"""
edition = "2018"
exclude = ["dotnet", "test_gen", ".idea", ".vscode", "*.yml", "*.iml", ".gitignore"]
license = "MIT"
name = "ru_annoy"
repository = "https://github.com/kis3tar/RuAnnoy"
version = "0.1.2"

[features]
cffi = ["libc"]

[dependencies]
libc = {version = "0", optional = true}
memmap2 = "0"

[lib]
crate-type = ["lib", "cdylib"]
