[package]
authors = ["kis3tar"]
description = """
Java bindings to annoy-rs.
"""
edition = "2018"
license = "MIT"
name = "annoy-rs-jni"
repository = "https://github.com/kis3tar/RuAnnoy"
version = "0.1.0"

[features]
default = ["simd"]
simd = ["annoy-rs/simd"]

[dependencies]
annoy-rs = {path = "../"}
jni = "0"
libc = "0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
